--- a/package.json
+++ b/package.json
@@ -7,11 +7,30 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "supabase:login": "npx supabase login",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@nuxt/icon": "^1.10.3",
+    "@nuxtjs/supabase": "^1.4.5",
+    "@pinia/nuxt": "^0.9.0",
     "nuxt": "^3.15.0",
+    "pinia": "^2.3.0",
+    "supabase": "^2.2.1",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@typescript-eslint/eslint-plugin": "^8.19.0",
+    "@typescript-eslint/parser": "^8.19.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.17.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "postcss": "^8.4.49",
+    "sass": "^1.83.1",
+    "typescript": "^5.7.2"
   }
 }
